# desenv-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md
desenv/: Cargo.toml
desenv/src/: error.rs  lib.rs
desenv_macros/: Cargo.toml
desenv_macros/src/: derive.rs  lib.rs  retainer.rs  ty.rs
desenv_macros/src/attr/: field.rs  mod.rs  struct.rs
desenv_tests/: Cargo.toml
desenv_tests/src/: compile.rs  default.rs  lib.rs  nested.rs  plain.rs  prefix.rs  rename.rs  separator.rs  test_utils.rs
desenv_tests/test-assets/desenv/failure/: desenv_attribute_used_twice_1.rs  desenv_attribute_used_twice_1.stderr  desenv_attribute_used_twice_2.rs  desenv_attribute_used_twice_2.stderr  desenv_wrong_usage_1.rs  desenv_wrong_usage_1.stderr  desenv_wrong_usage_2.rs  desenv_wrong_usage_2.stderr  desenv_wrong_usage_3.rs  desenv_wrong_usage_3.stderr  desenv_wrong_usage_4.rs  desenv_wrong_usage_4.stderr
desenv_tests/test-assets/field/failure/: default_env_not_string.rs  default_env_not_string.stderr  default_env_wrong_usage_1.rs  default_env_wrong_usage_1.stderr  default_env_wrong_usage_2.rs  default_env_wrong_usage_2.stderr  default_value_not_string.rs  default_value_not_string.stderr  default_value_wrong_usage_1.rs  default_value_wrong_usage_1.stderr  default_value_wrong_usage_2.rs  default_value_wrong_usage_2.stderr  default_wrong_usage_1.rs  default_wrong_usage_1.stderr  default_wrong_usage_2.rs  default_wrong_usage_2.stderr  nested_not_used_on_desenv_type.rs  nested_not_used_on_desenv_type.stderr  rename_empty_string.rs  (+27 more)
tests/: Cargo.toml
tests/src/: lib.rs
(+16 files in other folders)
