[package]
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
categories = ["config", "data-structures", "parsing"]
description = "Configuration loader from environment variables"
edition = "2021"
keywords = ["configuration", "config", "macro"]
license = "MIT OR Apache-2.0"
name = "desenv"
readme = "README.md"
repository = "https://github.com/cottinisimone/desenv"
rust-version = "1.58.0"
version = "0.1.0"

[dependencies]
desenv_macros = { path = "../desenv_macros" }
