[package]
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
categories = ["config", "data-structures", "parsing"]
description = "Configuration loader from environment variables"
edition = "2021"
keywords = ["configuration", "config", "macro"]
license = "MIT OR Apache-2.0"
name = "desenv_macros"
repository = "https://github.com/cottinisimone/desenv-rs"
rust-version = "1.58.0"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1.0.9"
