[package]
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
categories = ["config", "data-structures", "parsing"]
description = "Testing suite for desenv"
edition = "2021"
keywords = ["configuration", "config", "macro"]
license = "MIT OR Apache-2.0"
name = "tests"
readme = "README.md"
repository = "https://github.com/cottinisimone/desenv"
rust-version = "1.58.0"
version = "0.0.0"

[dependencies]
desenv = { path = "../desenv" }
